--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -246,7 +246,7 @@ jobs:
     - name: API Testing
       run: |
         ~/actionutils.sh install_hurl
-        ~/actionutils.sh hurl test/hurl/services-mon.hurl
+        ~/actionutils.sh hurl tests/hurl/services-mon.hurl
 
   multi-node-tests:
     name: Multi node testing
