Add an api endpoint to get mon addresses (#474)
# Description

Add an API endpoint for getting MON status info, currently only returning public addresses

## Type of change

Please delete options that are not relevant.

- [ ] Bug fix (non-breaking change which fixes an issue)
- [x] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] CleanCode (Code refactor, test updates, does not introduce
functional changes)
- [ ] Documentation update (Doc only change)

## How Has This Been Tested?

API test included

## Contributor's Checklist

Please check that you have:

- [x] self-reviewed the code in this PR.
- [ ] added code comments, particularly in hard-to-understand areas.
- [ ] updated the user documentation with corresponding changes.
- [x] added tests to verify effectiveness of this change.

---------

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -243,6 +243,11 @@ jobs:
         cat /var/snap/microceph/current/conf/ceph.conf
         fgrep -q "[${MON_IP}]" /var/snap/microceph/current/conf/ceph.conf
 
+    - name: API Testing
+      run: |
+        ~/actionutils.sh install_hurl
+        ~/actionutils.sh hurl tests/hurl/services-mon.hurl
+
   multi-node-tests:
     name: Multi node testing
     runs-on: ubuntu-22.04
