Add a `--port` parameter to the `run` target
Signed-off-by: Sharon Koech <sharon.koech@canonical.com>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -108,7 +108,7 @@ spelling: html
 
 linkcheck: install
 	. $(VENV) ; $(SPHINXBUILD) -b linkcheck "$(SOURCEDIR)" "$(BUILDDIR)" \
-	$(SPHINXOPTS)
+	$(SPHINXOPTS) --port 18000
 
 .PHONY: linkcheck
 
