Add a `--port` parameter to the `run` target in the Makefile (#501)
# Description

Relates to #492

Fixes # (issue)

## Type of change

- [x] Bug fix (non-breaking change which fixes an issue)
- [x] Documentation update (Doc only change)

---------

Signed-off-by: Sharon Koech <sharon.koech@canonical.com>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -60,7 +60,7 @@ install: $(VENVDIR)
 
 run: install
 	. $(VENV); sphinx-autobuild -b dirhtml "$(SOURCEDIR)" "$(BUILDDIR)" \
-	$(SPHINXOPTS)
+	$(SPHINXOPTS) --port 18000
 
 .PHONY: run
 
