fix: increase limits for nofile, nproc
Need to provide process-control to change limits

Need to change shell to bash to support ulimit -u in start scripts

Fixes: #524

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -66,6 +66,7 @@ apps:
     plugs:
       - network
       - network-bind
+      - process-control
   mon:
     command: commands/mon.start
     daemon: simple
@@ -76,6 +77,7 @@ apps:
       - hardware-observe
       - network
       - network-bind
+      - process-control
   mgr:
     command: commands/mgr.start
     daemon: simple
@@ -85,6 +87,7 @@ apps:
     plugs:
       - network
       - network-bind
+      - process-control
   osd:
     command: commands/osd.start
     reload-command: commands/osd.reload
@@ -101,7 +104,7 @@ apps:
       - network
       - network-bind
       - microceph-support
-
+      - process-control
   rgw:
     command: commands/rgw.start
     daemon: simple
@@ -112,7 +115,7 @@ apps:
       - hardware-observe
       - network
       - network-bind
-
+      - process-control
   "rbd-mirror":
     command: commands/rbd-mirror.start
     daemon: simple
@@ -122,7 +125,7 @@ apps:
     plugs:
       - network
       - network-bind
-
+      - process-control
   # Commands
   ceph:
     command: commands/ceph
