Added a content slot for exposing ceph logs
Signed-off-by: utkarsh bhatt <utkarsh.bhatt@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,6 +18,12 @@ plugs:
         load: on-boot
 
 slots:
+  ceph-logs:
+    interface: content
+    source:
+      read:
+        - "$SNAP_COMMON/logs"
+
   ceph-conf:
     interface: content
     source:
