fix: increase limits for nofile, nproc (#536)
# Description

Increases ulimit for Ceph services

Fixes: #524


## Type of change

Please delete options that are not relevant.

- [x] Bug fix (non-breaking change which fixes an issue)

## How Has This Been Tested?

> **_NOTE:_** All functional changes should accompany corresponding
tests (unit tests, functional tests etc).

Please describe the addition/modification of tests done to verify this
change. Please also list any relevant details for your test
configuration.

## Contributor's Checklist

Please check that you have:

- [x] self-reviewed the code in this PR.

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -72,6 +72,7 @@ apps:
     plugs:
       - network
       - network-bind
+      - process-control
   mon:
     command: commands/mon.start
     daemon: simple
@@ -82,6 +83,7 @@ apps:
       - hardware-observe
       - network
       - network-bind
+      - process-control
   mgr:
     command: commands/mgr.start
     daemon: simple
@@ -91,6 +93,7 @@ apps:
     plugs:
       - network
       - network-bind
+      - process-control
   osd:
     command: commands/osd.start
     reload-command: commands/osd.reload
@@ -107,7 +110,7 @@ apps:
       - network
       - network-bind
       - microceph-support
-
+      - process-control
   rgw:
     command: commands/rgw.start
     daemon: simple
@@ -118,7 +121,7 @@ apps:
       - hardware-observe
       - network
       - network-bind
-
+      - process-control
   "rbd-mirror":
     command: commands/rbd-mirror.start
     daemon: simple
@@ -128,7 +131,7 @@ apps:
     plugs:
       - network
       - network-bind
-
+      - process-control
   # Commands
   ceph:
     command: commands/ceph
