Added ceph-exporter to service placement interface
Signed-off-by: utkarsh bhatt <utkarsh.bhatt@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -137,6 +137,16 @@ apps:
       - network
       - network-bind
       - process-control
+  "ceph-exporter":
+    command: commands/ceph-exporter.start
+    daemon: simple
+    install-mode: disable
+    after:
+      - daemon
+    plugs:
+      - network
+      - network-bind
+      - process-control
   # Commands
   ceph:
     command: commands/ceph
