Migrate docs to the extension-based starter pack
Signed-off-by: Sharon Koech <sharon.koech@canonical.com>

--- a/.github/workflows/automatic-doc-checks.yml
+++ b/.github/workflows/automatic-doc-checks.yml
@@ -1,9 +1,13 @@
 name: Main Documentation Checks
 
 on:
-  - push
-  - pull_request
-  - workflow_dispatch
+  push:
+    branches: [main]
+  pull_request:
+    paths:
+      - "docs/**" # Only run on changes to the docs directory
+  workflow_dispatch:
+    # Manual trigger
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -13,7 +17,8 @@ jobs:
   documentation-checks:
     uses: canonical/documentation-workflows/.github/workflows/documentation-checks.yaml@main
     with:
-      working-directory: 'docs'
+      working-directory: "docs"
+      fetch-depth: 0
 
   openapi-check:
     name: OpenAPI Spec Check
