--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -878,6 +878,9 @@ jobs:
     - name: Enable RBD Mirror Daemon
       run : ~/actionutils.sh remote_enable_rbd_mirror_daemon
 
+    - name: Verify snapshot replication on pool fails
+      run: ~/actionutils.sh remote_verify_snapshot_pool_replication_fails
+
     - name: Configure RBD mirror
       run : ~/actionutils.sh remote_configure_rbd_mirroring
 
