--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,28 +69,16 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
+    - name: MicroCeph test common single node setup
+      uses: ./.github/actions/test-single-node-setup
 
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install and setup
+    - name: Verify metadata
       run: |
-        ~/actionutils.sh install_tools
-        ~/actionutils.sh install_microceph
-
         set -uex
         # Verify metadata.yaml
         meta=/var/snap/microceph/current/conf/metadata.yaml
@@ -277,40 +265,13 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install dependencies
-      run: ~/actionutils.sh setup_lxd
-
-    - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers public
-
-    - name: Install local microceph snap
-      run: ~/actionutils.sh install_multinode
-
-    - name: Bootstrap
-      run: ~/actionutils.sh bootstrap_head public
-
-    - name: Setup cluster
-      run: ~/actionutils.sh cluster_nodes public
+    - name: MicroCeph test common multi node setup
+      uses: ./.github/actions/test-multi-node-setup
 
     - name: Verify config
       run: ~/actionutils.sh test_ceph_conf
@@ -406,46 +367,18 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install dependencies
-      run: ~/actionutils.sh setup_lxd
-
-    - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers internal
-
-    - name: Install local microceph snap
-      run: ~/actionutils.sh install_multinode
-
-    - name: Bootstrap
-      run: ~/actionutils.sh bootstrap_head internal
-
-    - name: Setup cluster
-      run: ~/actionutils.sh cluster_nodes internal
-
-    - name: Add 3 OSDs
-      run: |
-        for c in node-wrk0 node-wrk1 node-wrk2 ; do
-          ~/actionutils.sh add_osd_to_node $c
-        done
+    - name: MicroCeph test common multi node setup
+      uses: ./.github/actions/test-multi-node-setup
+      with:
+        container-network-name: internal
+        bootstrap-parameters: bootstrap_head internal
+        setup-cluster-parameters: cluster_nodes internal
+        osd-count: 3
 
     - name: Test 3 osds present
       run: |
@@ -463,48 +396,18 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install dependencies
-      run: ~/actionutils.sh setup_lxd
-
-    - name: Create 4 containers with loopback devices
-      run: ~/actionutils.sh create_containers internal
-
-    - name: Install local microceph snap
-      run: ~/actionutils.sh install_multinode
-
-    - name: Bootstrap
-      run: ~/actionutils.sh bootstrap_head internal
-
-    - name: Setup cluster
-      run: ~/actionutils.sh cluster_nodes internal
-
-    - name: Add and wait for OSDs
-      run: |
-        set -uex
-        for i in 0 1 2 3 ; do
-          ~/actionutils.sh add_osd_to_node "node-wrk$i"
-        done
-        ~/actionutils.sh headexec wait_for_osds 4
+    - name: MicroCeph test common multi node setup
+      uses: ./.github/actions/test-multi-node-setup
+      with:
+        container-network-name: internal
+        bootstrap-parameters: bootstrap_head internal
+        setup-cluster-parameters: cluster_nodes internal
+        osd-count: 4
 
     - name: Wait for ceph cluster to settle
       run: |
@@ -563,37 +466,15 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install and setup
-      run: |
-        ~/actionutils.sh install_tools        
-        ~/actionutils.sh install_microceph
-
-    - name: Add loopback file OSDs
-      run: |
-        set -uex
-        sudo microceph disk add loop,1G,4
-        ~/actionutils.sh wait_for_osds 4
-        sudo microceph.ceph -s
+    - name: MicroCeph test common single node setup
+      uses: ./.github/actions/test-single-node-setup
+      with:
+        osd-count: 4
 
     - name: Enable RGW
       run: ~/actionutils.sh enable_rgw
@@ -618,37 +499,15 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install and setup
-      run: |
-        ~/actionutils.sh install_tools        
-        ~/actionutils.sh install_microceph
-
-    - name: Add loopback file OSDs
-      run: |
-        set -uex
-        sudo microceph disk add loop,1G,3
-        ~/actionutils.sh wait_for_osds 3
-        sudo microceph.ceph -s
+    - name: MicroCeph test common single node setup
+      uses: ./.github/actions/test-single-node-setup
+      with:
+        osd-count: 3
 
     - name: Add WAL/DB enabled OSD
       run: |
@@ -686,49 +545,18 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install dependencies
-      run: |
-        ~/actionutils.sh install_tools
-        ~/actionutils.sh setup_lxd
-
-    - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers public
-
-    - name: Install quincy stable from store
-      run: ~/actionutils.sh install_store quincy/stable
-
-    - name: Bootstrap
-      run: ~/actionutils.sh bootstrap_head
-
-    - name: Setup cluster
-      run: ~/actionutils.sh cluster_nodes
-
-    - name: Add 3 OSDs
-      run: |
-        for c in node-wrk0 node-wrk1 node-wrk2 ; do
-          ~/actionutils.sh add_osd_to_node $c
-        done
-        ~/actionutils.sh headexec wait_for_osds 3
+    - name: MicroCeph test common multi node setup
+      uses: ./.github/actions/test-multi-node-setup
+      with:
+        ceph-release: "quincy/stable"
+        bootstrap-parameters: "bootstrap_head"
+        setup-cluster-parameters: "cluster_nodes"
+        osd-count: 3
 
     - name: Enable RGW
       run: ~/actionutils.sh headexec enable_rgw
@@ -759,49 +587,18 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install dependencies
-      run: |
-        ~/actionutils.sh install_tools
-        ~/actionutils.sh setup_lxd
-
-    - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers public
-
-    - name: Install reef stable from store
-      run: ~/actionutils.sh install_store reef/stable
-
-    - name: Bootstrap
-      run: ~/actionutils.sh bootstrap_head
-
-    - name: Setup cluster
-      run: ~/actionutils.sh cluster_nodes
-
-    - name: Add 3 OSDs
-      run: |
-        for c in node-wrk0 node-wrk1 node-wrk2 ; do
-          ~/actionutils.sh add_osd_to_node $c
-        done
-        ~/actionutils.sh headexec wait_for_osds 3
+    - name: MicroCeph test common multi node setup
+      uses: ./.github/actions/test-multi-node-setup
+      with:
+        ceph-release: "reef/stable"
+        bootstrap-parameters: "bootstrap_head"
+        setup-cluster-parameters: "cluster_nodes"
+        osd-count: 3
 
     - name: Enable RGW
       run: ~/actionutils.sh headexec enable_rgw
@@ -835,37 +632,15 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install and setup
-      run: |
-        ~/actionutils.sh install_tools        
-        ~/actionutils.sh install_microceph
-
-    - name: Add loopback file OSDs
-      run: |
-        set -uex
-        sudo microceph disk add loop,1G,3
-        ~/actionutils.sh wait_for_osds 3
-        sudo microceph.ceph -s
+    - name: MicroCeph test common single node setup
+      uses: ./.github/actions/test-single-node-setup
+      with:
+        osd-count: 3
 
     - name: Enable RGW
       run: ~/actionutils.sh enable_rgw
@@ -884,39 +659,16 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install dependencies
-      run: |
-        ~/actionutils.sh install_tools        
-        ~/actionutils.sh setup_lxd
-
-    - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers public
-
-    - name: Install local microceph snap
-      run: ~/actionutils.sh install_multinode
-
-    - name: Bootstrap
-      run: ~/actionutils.sh remote_simple_bootstrap_two_sites
+    - name: MicroCeph test common multi node setup
+      uses: ./.github/actions/test-multi-node-setup
+      with:
+        bootstrap-parameters: "remote_simple_bootstrap_two_sites"
+        setup-cluster-parameters: ""
 
     - name: Exchange Cluster tokens
       run: ~/actionutils.sh remote_exchange_site_tokens
@@ -953,35 +705,16 @@ jobs:
     runs-on: ubuntu-24.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
 
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install dependencies
-      run: ~/actionutils.sh setup_lxd
-
-    - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers public
-
-    - name: Install local microceph snap
-      run: ~/actionutils.sh install_multinode
-
-    - name: Bootstrap
-      run: ~/actionutils.sh remote_simple_bootstrap_two_sites
+    - name: MicroCeph test common multi node setup
+      uses: ./.github/actions/test-multi-node-setup
+      with:
+        bootstrap-parameters: "remote_simple_bootstrap_two_sites"
+        setup-cluster-parameters: ""
 
     - name: Exchange Cluster tokens
       run: ~/actionutils.sh remote_exchange_site_tokens
@@ -1015,35 +748,15 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install and setup
-      run: ~/actionutils.sh install_microceph
-
-    - name: Add loopback file OSDs
-      run: |
-        set -uex
-        sudo microceph disk add loop,1G,3
-        ~/actionutils.sh wait_for_osds 3
-        sudo microceph.ceph -s
+    - name: MicroCeph test common single node setup
+      uses: ./.github/actions/test-single-node-setup
+      with:
+        osd-count: 3
 
     - name: Enable NFS
       run: ~/actionutils.sh enable_nfs foo
@@ -1080,46 +793,15 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install dependencies
-      run: ~/actionutils.sh setup_lxd
-
-    - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers public
-
-    - name: Install local microceph snap
-      run: ~/actionutils.sh install_multinode
-
-    - name: Bootstrap
-      run: ~/actionutils.sh bootstrap_head public
-
-    - name: Setup cluster
-      run: ~/actionutils.sh cluster_nodes public
-
-    - name: Add 3 OSDs
-      run: |
-        for c in node-wrk0 node-wrk1 node-wrk2 ; do
-          ~/actionutils.sh add_osd_to_node $c
-        done
+    - name: MicroCeph test common multi node setup
+      uses: ./.github/actions/test-multi-node-setup
+      with:
+        osd-count: 3
 
     - name: Enable NFS
       run: ~/actionutils.sh enable_nfs_in_nodes foo node-wrk0 node-wrk1 node-wrk2
@@ -1154,37 +836,16 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-microceph
     steps:
-    - name: Download snap
-      uses: actions/download-artifact@v4
-      with:
-        name: snaps
-        path: /home/runner
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Copy utils
-      run: cp tests/scripts/actionutils.sh $HOME
-
-    - name: Clear FORWARD firewall rules
-      run: ~/actionutils.sh cleaript
-
-    - name: Free disk
-      run: ~/actionutils.sh free_runner_disk
-
-    - name: Install dependencies
-      run: ~/actionutils.sh setup_lxd
-
-    - name: Create containers with loopback devices
-      run: ~/actionutils.sh create_containers public
-
-    - name: Install local microceph snap
-      run: ~/actionutils.sh install_multinode
-
-    - name: Bootstrap
-      run: ~/actionutils.sh bootstrap_head public --v2-only
+    - name: MicroCeph test common multi node setup
+      uses: ./.github/actions/test-multi-node-setup
+      with:
+        bootstrap-parameters: bootstrap_head public --v2-only
+        setup-cluster-parameters: ""
 
     - name: Verify messenger v2 on head node
       run: ~/actionutils.sh test_v2_single_node
