fix: mount check uses findmnt instead of /proc/mounts
For checking if a block dev is mounted should use findmnt as
/proc/mounts is unreliable, as the kernel can insert a pseudo
/dev/root device for the rootfs

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -216,6 +216,7 @@ parts:
       - rbd-mirror
       # Utilities
       - coreutils
+      - util-linux
       - uuid-runtime
       - python3-setuptools
       - python3-packaging
@@ -242,6 +243,7 @@ parts:
       - bin/rbd-mirror
       - bin/truncate
       - bin/uuidgen
+      - bin/findmnt
       - lib/*/ceph
       - lib/*/libaio.so*
       - lib/*/libasn1.so*
