fix: check if disks are pristine before attempting to use them (#590)
# Description

Check for pristineness before attempting to use a block device. We read
the first 2kb off a block device and deem the disk pristine if it
contains all zeroes.

Mount check fix: don't rely on /proc/mounts as that can be unreliable
(cf. /dev/root pseudo devices esp. on jammy), use findmnt instead

## Type of change

Delete options that are not relevant.

- Bug fix (non-breaking change which fixes an issue)

## How has this been tested?

Unit tests

## Contributor checklist

Please check that you have:

- [x] self-reviewed the code in this PR
- [x] added code comments, particularly in less straightforward areas
- [x] added tests to verify effectiveness of this change

---------

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -227,6 +227,7 @@ parts:
       - cephfs-mirror
       # Utilities
       - coreutils
+      - util-linux
       - uuid-runtime
       - python3-setuptools
       - python3-packaging
@@ -254,6 +255,7 @@ parts:
       - bin/cephfs-mirror
       - bin/truncate
       - bin/uuidgen
+      - bin/findmnt
       - lib/*/ceph
       - lib/*/libaio.so*
       - lib/*/libasn1.so*
